# Cpp_Lab

./: CMakeLists.txt  README.md  lab4.cpp  lab4_3.cpp  lab4_zad3.cpp  losowe.cpp  petla_for.cpp  tablice3.cpp
