cmake_minimum_required(VERSION 3.26)
project(Cpp_Lab)

set(CMAKE_CXX_STANDARD 14)

add_executable(Cpp_Lab
        petla_for.cpp)
add_executable(losowe losowe.cpp)
add_executable(tablice cmake-build-debug/tablice.cpp)
add_executable(talice3 tablice3.cpp)
add_executable(lab4 lab4.cpp)
add_executable(lab4_3 lab4_3.cpp)
add_executable(lab4_zad1 cmake-build-debug/lab4_zad1.cpp)
add_executable(lab4_zad2 lab4_zad2.cpp)
add_executable(lab4_zad3 lab4_zad3.cpp)
